feat: add PMCID support across services and update localization for identifiers

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -62,6 +62,11 @@
   "display-mode": "Anzeigemodus",
   "display-mode-description": "Wählen Sie den Anzeigemodus der Erweiterung",
   "doi": "DOI",
+  "pmid": "PMID",
+  "pmcid": "PMCID",
+  "arxivId": "arXiv ID",
+  "isbn": "ISBN",
+  "issn": "ISSN",
   "doi-copied": "Kopiert",
   "doi-incorrect": "Der DOI ist in Ihrer Quelle falsch",
   "doi-incorrect-extracted": "Der DOI wurde falsch extrahiert",
