--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -68,6 +68,11 @@
   "doi-match": "DOI Match",
   "doi-not-activated": "The DOI has not been activated yet",
   "doi-not-found": "The DOI was not found. Possible reasons are:",
+  "pmid": "PMID",
+  "pmcid": "PMCID",
+  "arxivId": "arXiv ID",
+  "isbn": "ISBN",
+  "issn": "ISSN",
   "download-report-pdf": "Download report as PDF",
   "edition": "Edition",
   "english": "English",
