feat: add copy identifier functionality and update localization for tooltips

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -50,6 +50,8 @@
   "copy": "Kopieren",
   "copy-clicked": "Kopiert!",
   "copy-hover": "Klicken zum Kopieren",
+  "copy-identifier": "Kennung kopieren",
+  "copy-identifier-tooltip": "Die primäre Kennung (DOI, PMCID, etc.) in die Zwischenablage kopieren",
   "copy-reference": "Referenz kopieren",
   "create-one-here": "hier erstellen",
   "dark": "Dunkel",
@@ -87,6 +89,8 @@
   "extracting-references-description": "Extrahiere Referenzen aus dem Text...",
   "found": "Gefunden",
   "found-references-tooltip": "Alle im Text erkannten Referenzen",
+  "flag-problematic": "Als problematisch markieren",
+  "flag-problematic-tooltip": "Diese Referenz als möglicherweise problematisch kennzeichnen",
   "gemini-2.0-flash-description": "Schnellere Ergebnisse, aber weniger genau und mehr Anfragen pro Minute möglich",
   "gemini-2.0-flash-lite-description": "Schnellste Ergebnisse, aber am wenigsten genau und die meisten Anfragen pro Minute möglich",
   "gemini-2.5-pro-description": "Beste Ergebnisse, aber langsam und wenige Anfragen pro Minute möglich",
@@ -150,6 +154,7 @@
   "note": "Hinweis",
   "o3-mini-description": "Schnelles, flexibles, intelligentes Denkmodell",
   "open-source": "Quelle öffnen",
+  "open-source-tooltip": "Die ursprüngliche Quelle in einem neuen Tab öffnen",
   "original-language": "Originalsprache",
   "original-text": "Originaltext",
   "original-title": "Originaltitel",
@@ -175,6 +180,8 @@
   "requests-per-minute-description": "Dies ist das Limit der KI-Anfragen pro Minute",
   "resets-in": "Wird zurückgesetzt in ca.",
   "retrieval-date": "Abrufdatum",
+  "re-verify": "Erneut überprüfen",
+  "re-verify-tooltip": "Die Überprüfung für diese Referenz erneut durchführen",
   "search": "Suche",
   "search-and-verification": "Suche und Überprüfung",
   "search-and-verify": "Suche und Überprüfung",
