--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -50,6 +50,8 @@
   "copy": "Copy",
   "copy-clicked": "Copied!",
   "copy-hover": "Click to copy",
+  "copy-identifier": "Copy identifier",
+  "copy-identifier-tooltip": "Copy the primary identifier (DOI, PMCID, etc.) to clipboard",
   "copy-reference": "Copy reference",
   "create-one-here": "create one here",
   "dark": "Dark",
@@ -87,6 +89,8 @@
   "extracting-references-description": "Extracting References from the Text...",
   "found": "Found",
   "found-references-tooltip": "All references recognized in the text",
+  "flag-problematic": "Flag as problematic",
+  "flag-problematic-tooltip": "Mark this reference as potentially problematic",
   "gemini-2.0-flash-description": "Faster results, but less accurate and more requests per minute possible",
   "gemini-2.0-flash-lite-description": "Fastest results, but least accurate and most requests per minute possible",
   "gemini-2.5-pro-description": "Best results, but slow and few requests per minute possible",
@@ -149,7 +153,8 @@
   "not-verified": "Not verified",
   "note": "Note",
   "o3-mini-description": "Fast, flexible, intelligent reasoning model",
-  "open-source": "Open Source",
+  "open-source": "Open source",
+  "open-source-tooltip": "Open the original source in a new tab",
   "original-language": "Original Language",
   "original-text": "Original text",
   "original-title": "Original Title",
@@ -175,6 +180,8 @@
   "requests-per-minute-description": "This is the limit of AI requests per minute",
   "resets-in": "Resets in approximately",
   "retrieval-date": "Retrieval Date",
+  "re-verify": "Re-verify",
+  "re-verify-tooltip": "Run verification again for this reference",
   "search": "Search",
   "search-and-verification": "Search and verification",
   "search-and-verify": "Search and Verify",
