--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -229,6 +229,8 @@
   "verified-references-tooltip": "Referenzen, die erfolgreich einer Quelle zugeordnet werden konnten",
   "verifying-references-progress": "Überprüfe Referenzen ({current}/{total})",
   "verifying-reference-current": "Überprüfe: {reference}",
+  "cancel-verification": "Überprüfung abbrechen",
+  "restart-verification": "Überprüfung neu starten",
   "verify": "Überprüfen",
   "verify-references": "Quellenangaben überprüfen",
   "view-demo": "Eine Demonstration zur Verwendung der Erweiterung ansehen",
