feat: implement re-verification functionality and enhance progress feedback with localization updates

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -229,6 +229,8 @@
   "verified-references-tooltip": "Referenzen, die erfolgreich einer Quelle zugeordnet werden konnten",
   "verifying-references-progress": "Überprüfe Referenzen ({current}/{total})",
   "verifying-reference-current": "Überprüfe: {reference}",
+  "re-verifying-reference": "Überprüfe erneut: {reference}",
+  "verification-in-progress": "Eine andere Überprüfung läuft bereits",
   "cancel-verification": "Überprüfung abbrechen",
   "restart-verification": "Überprüfung neu starten",
   "verify": "Überprüfen",
