feat: enhance date handling by implementing formatted date display and adding localization for publication date

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -242,6 +242,7 @@
   "volume-match": "Band-Übereinstimmung",
   "volume-prefix": "Band-Präfix",
   "website": "Webseite",
+  "publication-date": "Publikationsdatum",
   "year": "Jahr",
   "year-match": "Jahr-Übereinstimmung",
   "year-suffix": "Jahr-Suffix"
