--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -242,6 +242,7 @@
   "volume-match": "Volume Match",
   "volume-prefix": "Volume Prefix",
   "website": "Website",
+  "publication-date": "Publication Date",
   "year": "Year",
   "year-match": "Year Match",
   "year-suffix": "Year Suffix"
