feat: enhance report card UI with improved layout and localization for verification status

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -245,5 +245,12 @@
   "publication-date": "Publikationsdatum",
   "year": "Jahr",
   "year-match": "Jahr-Übereinstimmung",
-  "year-suffix": "Jahr-Suffix"
+  "year-suffix": "Jahr-Suffix",
+  "verification-with-errors": "{verified}/{total} verifiziert ({errors} Fehler)",
+  "all-references-verified": "Alle {total} Referenzen verifiziert ✓",
+  "no-references-verified": "0/{total} Referenzen verifiziert",
+  "partial-verification": "{verified}/{total} verifiziert ({percentage}%)",
+  "retry-verification": "Verifikation wiederholen",
+  "references-count": "{count} Referenzen",
+  "no-data-available": "Keine Daten verfügbar"
 }
