feat: update localization files to add new reference verification messages and improve existing entries

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -12,6 +12,7 @@
   "ai-model-description": "Wählen Sie das KI-Modell, das für die Extraktion verwendet werden soll",
   "ai-used": "DOIs mit KI extrahiert",
   "all-found-sources": "Alle gefundenen Quellen",
+  "all-references-verified": "Alle {total} Referenzen verifiziert ✓",
   "analyzing-references": "Analysiere Referenzinhalte…",
   "analyzing-references-description": "Es wird nach passenden Quellen gesucht und die Übereinstimmung mit deinen Referenzen überprüft. Je nach Anzahl der Referenzen kann dies einige Zeit dauern.",
   "analyzing-text-content": "Analysiere Textinhalt…",
@@ -24,6 +25,7 @@
   "approximate-date": "Ungefähres Datum",
   "approximate-date-indicator": "ca.",
   "article-number": "Artikelnummer",
+  "arxivId": "arXiv ID",
   "authors": "Autoren",
   "authors-match": "Autoren-Übereinstimmung",
   "auto-check-references-description": "Referenzen werden automatisch extrahiert und geprüft, sobald Text eingefügt oder eine PDF importiert wird",
@@ -35,11 +37,13 @@
   "best-match": "Beste Übereinstimmung",
   "best-match-from": "Beste Übereinstimmung von",
   "browse": "Durchsuchen",
+  "cancel-verification": "Überprüfung abbrechen",
   "chapter-title": "Kapiteltitel",
   "check-dois": "Bitte überprüfen Sie Ihre Eingabe und stellen Sie sicher, dass diese DOIs enthält und korrekt formatiert ist, um die Suchergebnisse zu verbessern",
   "check-references": "Referenzen prüfen",
   "check-references-shortcut": "Referenzen prüfen (Cmd+Enter / Strg+Enter)",
   "checked": "überprüft",
+  "close": "Schließen",
   "conference": "Konferenz",
   "connection-problem": "Es könnte ein Problem mit Ihrer Verbindung geben. Bitte überprüfen Sie Ihre Internetverbindung.",
   "contact": "Kontakt",
@@ -59,16 +63,13 @@
   "day": "Tag",
   "degree": "Abschluss",
   "department": "Abteilung",
+  "description": "Beschreibung",
+  "description-match": "Beschreibung-Übereinstimmung",
   "details": "Details",
   "display": "Darstellung",
   "display-mode": "Anzeigemodus",
   "display-mode-description": "Wählen Sie den Anzeigemodus der Erweiterung",
   "doi": "DOI",
-  "pmid": "PMID",
-  "pmcid": "PMCID",
-  "arxivId": "arXiv ID",
-  "isbn": "ISBN",
-  "issn": "ISSN",
   "doi-copied": "Kopiert",
   "doi-incorrect": "Der DOI ist in Ihrer Quelle falsch",
   "doi-incorrect-extracted": "Der DOI wurde falsch extrahiert",
@@ -80,6 +81,7 @@
   "english": "Englisch",
   "enter-dois": "Bitte geben Sie DOIs ein, einen Text mit DOIs oder importieren Sie eine PDF-Datei mit DOIs, um diese zu validieren",
   "enter-references": "Bitte geben Sie einen Text ein oder importieren Sie eine PDF-Datei mit Referenzen, um diese zu überprüfen",
+  "enter-website-url": "Website-URL eingeben",
   "error": "Fehler",
   "error-reference": "Referenz konnte aufgrund eines technischen Fehlers nicht überprüft werden",
   "error-references-tooltip": "Referenzen, die aufgrund eines technischen Fehlers nicht überprüft werden konnten",
@@ -87,10 +89,10 @@
   "extracting-dois-description": "Extrahiere DOIs aus dem Text. Bitte warten...",
   "extracting-references": "Extrahiere Referenzen...",
   "extracting-references-description": "Extrahiere Referenzen aus dem Text...",
-  "found": "Gefunden",
-  "found-references-tooltip": "Alle im Text erkannten Referenzen",
   "flag-problematic": "Als problematisch markieren",
   "flag-problematic-tooltip": "Diese Referenz als möglicherweise problematisch kennzeichnen",
+  "found": "Gefunden",
+  "found-references-tooltip": "Alle im Text erkannten Referenzen",
   "gemini-2.0-flash-description": "Schnellere Ergebnisse, aber weniger genau und mehr Anfragen pro Minute möglich",
   "gemini-2.0-flash-lite-description": "Schnellste Ergebnisse, aber am wenigsten genau und die meisten Anfragen pro Minute möglich",
   "gemini-2.5-pro-description": "Beste Ergebnisse, aber langsam und wenige Anfragen pro Minute möglich",
@@ -115,6 +117,9 @@
   "institution": "Institution",
   "invalid": "Ungültig",
   "invalid-description": "Ungültig. Bitte überprüfen Sie den DOI auf Richtigkeit",
+  "invalid-url": "Bitte geben Sie eine gültige URL ein",
+  "isbn": "ISBN",
+  "issn": "ISSN",
   "issue": "Ausgabe",
   "issue-match": "Ausgabe-Übereinstimmung",
   "issue-prefix": "Ausgabe-Präfix",
@@ -138,6 +143,7 @@
   "min": "min",
   "month": "Monat",
   "no-additional-error-info": "Keine zusätzlichen Fehlerinformationen verfügbar",
+  "no-data-available": "Keine Daten verfügbar",
   "no-date": "Kein Datum",
   "no-date-indicator": "o.J.",
   "no-input-provided": "Keine Eingabe bereitgestellt",
@@ -147,6 +153,7 @@
   "no-references-found-text": "Bitte überprüfe den eingegebenen Text oder lade ein Dokument mit formatierten Referenzen hoch. Achte darauf, dass Literaturangaben vollständig und korrekt sind.",
   "no-references-found-title": "Leider konnten keine Referenzen gefunden werden",
   "no-references-to-check": "Noch keine Referenzen zum Überprüfen",
+  "no-references-verified": "0/{total} Referenzen verifiziert",
   "no-results-found": "Keine Ergebnisse gefunden",
   "no-title": "Kein Titel",
   "no-valid-dois-were-found": "Keine DOIs gefunden",
@@ -163,13 +170,22 @@
   "pages": "Seiten",
   "pages-match": "Seiten-Übereinstimmung",
   "paragraph-number": "Absatznummer",
+  "partial-verification": "{verified}/{total} verifiziert ({percentage}%)",
   "pdf-file": "PDF-Datei",
   "pending-reference": "Ausstehende Überprüfung. Bitte warten Sie, bis die Überprüfung abgeschlossen ist.",
+  "pmcid": "PMCID",
+  "pmid": "PMID",
   "popup": "Popup",
+  "publication-date": "Publikationsdatum",
   "publication-place": "Publikationsort",
+  "published-date": "Veröffentlichungsdatum",
   "publisher": "Verlag",
+  "re-verify": "Erneut überprüfen",
+  "re-verify-tooltip": "Die Überprüfung für diese Referenz erneut durchführen",
+  "re-verifying-reference": "Überprüfe erneut: {reference}",
   "recommended": "Empfohlen",
   "reference-metadata": "Referenz-Metadaten",
+  "references-count": "{count} Referenzen",
   "registered": "Registriert",
   "reload-page-auto-import": "Seite neu laden, um Referenzen automatisch zu finden und zu importieren",
   "remove-file-to-enable-text-input": "Datei entfernen, um die Texteingabe zu aktivieren",
@@ -179,9 +195,9 @@
   "requests-per-minute": "Anfragen pro Minute",
   "requests-per-minute-description": "Dies ist das Limit der KI-Anfragen pro Minute",
   "resets-in": "Wird zurückgesetzt in ca.",
+  "restart-verification": "Überprüfung neu starten",
   "retrieval-date": "Abrufdatum",
-  "re-verify": "Erneut überprüfen",
-  "re-verify-tooltip": "Die Überprüfung für diese Referenz erneut durchführen",
+  "retry-verification": "Verifikation wiederholen",
   "search": "Suche",
   "search-and-verification": "Suche und Überprüfung",
   "search-and-verify": "Suche und Überprüfung",
@@ -197,6 +213,7 @@
   "show-date-details": "Datumsdetails anzeigen",
   "show-details": "Details anzeigen",
   "side-panel": "Seitenleiste",
+  "site-name": "Website-Name",
   "source": "Quelle",
   "source-code": "Quellcode",
   "source-metadata": "Quellen-Metadaten",
@@ -219,38 +236,34 @@
   "unverified-reference": "Referenz konnte keiner Quelle zugeordnet werden. Bitte überprüfen Sie die Referenz manuell.",
   "unverified-references-tooltip": "Referenzen, die keiner Quelle zugeordnet werden konnten",
   "upload-pdf": "PDF-Datei importieren",
+  "url": "URL",
+  "url-match": "URL-Übereinstimmung",
+  "url-required": "URL ist erforderlich",
   "usage": "Nutzung",
+  "using-archived-version": "Verwendung der archivierten Version vom",
   "valid": "Gültig",
   "valid-description": "Gültig",
   "verification-details": "Verifikationsdetails",
+  "verification-failed": "Verifizierung fehlgeschlagen",
+  "verification-in-progress": "Eine andere Überprüfung läuft bereits",
+  "verification-successful": "Verifizierung erfolgreich",
+  "verification-with-errors": "{verified}/{total} verifiziert ({errors} Fehler)",
   "verified": "Verifiziert",
   "verified-against": "Verifiziert gegen",
   "verified-reference": "Referenz konnte erfolgreich einer Quelle zugeordnet werden",
   "verified-references-tooltip": "Referenzen, die erfolgreich einer Quelle zugeordnet werden konnten",
-  "verifying-references-progress": "Überprüfe Referenzen ({current}/{total})",
+  "verify": "Prüfen",
+  "verify-against-website": "Gegen Website prüfen",
+  "verify-reference-against-website-description": "Geben Sie eine Website-URL ein, um diese Referenz gegen den Website-Inhalt zu prüfen",
   "verifying-reference-current": "Überprüfe: {reference}",
-  "re-verifying-reference": "Überprüfe erneut: {reference}",
-  "verification-in-progress": "Eine andere Überprüfung läuft bereits",
-  "cancel-verification": "Überprüfung abbrechen",
-  "restart-verification": "Überprüfung neu starten",
-  "verify": "Überprüfen",
-  "verify-references": "Quellenangaben überprüfen",
-  "view-demo": "Eine Demonstration zur Verwendung der Erweiterung ansehen",
-  "view-github": "Projekt auf GitHub ansehen",
-  "visit-website": "Webseite besuchen",
+  "verifying-references-progress": "Überprüfe Referenzen ({current}/{total})",
   "volume": "Band",
   "volume-match": "Band-Übereinstimmung",
   "volume-prefix": "Band-Präfix",
   "website": "Webseite",
-  "publication-date": "Publikationsdatum",
+  "website-metadata": "Website-Metadaten",
+  "website-url": "Website-URL",
   "year": "Jahr",
   "year-match": "Jahr-Übereinstimmung",
-  "year-suffix": "Jahr-Suffix",
-  "verification-with-errors": "{verified}/{total} verifiziert ({errors} Fehler)",
-  "all-references-verified": "Alle {total} Referenzen verifiziert ✓",
-  "no-references-verified": "0/{total} Referenzen verifiziert",
-  "partial-verification": "{verified}/{total} verifiziert ({percentage}%)",
-  "retry-verification": "Verifikation wiederholen",
-  "references-count": "{count} Referenzen",
-  "no-data-available": "Keine Daten verfügbar"
+  "year-suffix": "Jahr-Suffix"
 }
