--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -12,6 +12,7 @@
   "ai-model-description": "Select the AI model to be used for the extraction.",
   "ai-used": "DOIs extracted with AI",
   "all-found-sources": "All Found Sources",
+  "all-references-verified": "All {total} references verified ✓",
   "analyzing-references": "Analyzing reference content…",
   "analyzing-references-description": "We're searching for matching sources and checking them against your references. This may take some time depending on the number of references.",
   "analyzing-text-content": "Analyzing text content…",
@@ -24,6 +25,7 @@
   "approximate-date": "Approximate Date",
   "approximate-date-indicator": "ca.",
   "article-number": "Article Number",
+  "arxivId": "arXiv ID",
   "authors": "Authors",
   "authors-match": "Authors Match",
   "auto-check-references-description": "References are automatically extracted and checked as soon as text is pasted or a PDF is imported",
@@ -35,11 +37,13 @@
   "best-match": "Best Match",
   "best-match-from": "",
   "browse": "Browse",
+  "cancel-verification": "Cancel verification",
   "chapter-title": "Chapter Title",
   "check-dois": "Please check your input and ensure it contains DOIs and is correctly formatted to improve search results",
   "check-references": "Check References",
   "check-references-shortcut": "Check References (Cmd+Enter / Ctrl+Enter)",
   "checked": "checked",
+  "close": "Close",
   "conference": "Conference",
   "connection-problem": "There might be a problem with your connection. Please check your internet connection.",
   "contact": "Contact",
@@ -59,6 +63,8 @@
   "day": "Day",
   "degree": "Degree",
   "department": "Department",
+  "description": "Description",
+  "description-match": "Description Match",
   "details": "",
   "display": "Display",
   "display-mode": "Display Mode",
@@ -70,16 +76,12 @@
   "doi-match": "DOI Match",
   "doi-not-activated": "The DOI has not been activated yet",
   "doi-not-found": "The DOI was not found. Possible reasons are:",
-  "pmid": "PMID",
-  "pmcid": "PMCID",
-  "arxivId": "arXiv ID",
-  "isbn": "ISBN",
-  "issn": "ISSN",
   "download-report-pdf": "Download report as PDF",
   "edition": "Edition",
   "english": "English",
   "enter-dois": "Please enter DOIs, a text containing DOIs, or import a PDF containing DOIs to validate them",
   "enter-references": "Please enter a text or import a PDF containing references to verify them",
+  "enter-website-url": "Enter website URL",
   "error": "Error",
   "error-reference": "Reference could not be verified due to a technical error",
   "error-references-tooltip": "References that could not be verified due to a technical error",
@@ -87,10 +89,10 @@
   "extracting-dois-description": "Extracting DOIs from the Text. Please wait...",
   "extracting-references": "Extracting References...",
   "extracting-references-description": "Extracting References from the Text...",
-  "found": "Found",
-  "found-references-tooltip": "All references recognized in the text",
   "flag-problematic": "Flag as problematic",
   "flag-problematic-tooltip": "Mark this reference as potentially problematic",
+  "found": "Found",
+  "found-references-tooltip": "All references recognized in the text",
   "gemini-2.0-flash-description": "Faster results, but less accurate and more requests per minute possible",
   "gemini-2.0-flash-lite-description": "Fastest results, but least accurate and most requests per minute possible",
   "gemini-2.5-pro-description": "Best results, but slow and few requests per minute possible",
@@ -115,6 +117,9 @@
   "institution": "Institution",
   "invalid": "Invalid",
   "invalid-description": "Invalid. Please check the DOI for accuracy",
+  "invalid-url": "Please enter a valid URL",
+  "isbn": "ISBN",
+  "issn": "ISSN",
   "issue": "Issue",
   "issue-match": "Issue Match",
   "issue-prefix": "Issue Prefix",
@@ -138,6 +143,7 @@
   "min": "min",
   "month": "Month",
   "no-additional-error-info": "No additional error information available",
+  "no-data-available": "No data available",
   "no-date": "No Date",
   "no-date-indicator": "n.d.",
   "no-input-provided": "No Input Provided",
@@ -147,6 +153,7 @@
   "no-references-found-text": "Please check the entered text or upload a document with properly formatted references. Make sure that citation details are complete and correct.",
   "no-references-found-title": "Unfortunately, no references could be found",
   "no-references-to-check": "No references to check yet",
+  "no-references-verified": "0/{total} references verified",
   "no-results-found": "No Results Found",
   "no-title": "No title",
   "no-valid-dois-were-found": "No DOIs found",
@@ -163,13 +170,22 @@
   "pages": "Pages",
   "pages-match": "Pages Match",
   "paragraph-number": "Paragraph Number",
+  "partial-verification": "{verified}/{total} verified ({percentage}%)",
   "pdf-file": "PDF File",
   "pending-reference": "Pending verification. Please wait for the verification to complete.",
+  "pmcid": "PMCID",
+  "pmid": "PMID",
   "popup": "Popup",
+  "publication-date": "Publication Date",
   "publication-place": "Publication Place",
+  "published-date": "Published Date",
   "publisher": "Publisher",
+  "re-verify": "Re-verify",
+  "re-verify-tooltip": "Run verification again for this reference",
+  "re-verifying-reference": "Re-verifying: {reference}",
   "recommended": "Recommended",
   "reference-metadata": "Reference Metadata",
+  "references-count": "{count} references",
   "registered": "Registered",
   "reload-page-auto-import": "Reload the page to automatically find and import references",
   "remove-file-to-enable-text-input": "Remove file to enable text input",
@@ -179,9 +195,9 @@
   "requests-per-minute": "Requests per minute",
   "requests-per-minute-description": "This is the limit of AI requests per minute",
   "resets-in": "Resets in approximately",
+  "restart-verification": "Restart verification",
   "retrieval-date": "Retrieval Date",
-  "re-verify": "Re-verify",
-  "re-verify-tooltip": "Run verification again for this reference",
+  "retry-verification": "Retry verification",
   "search": "Search",
   "search-and-verification": "Search and verification",
   "search-and-verify": "Search and Verify",
@@ -197,6 +213,7 @@
   "show-date-details": "Show date details",
   "show-details": "Show Details",
   "side-panel": "Side Panel",
+  "site-name": "Site Name",
   "source": "Source",
   "source-code": "Source Code",
   "source-metadata": "Source Metadata",
@@ -219,38 +236,34 @@
   "unverified-reference": "Reference could not be matched to a source. Please verify the reference manually",
   "unverified-references-tooltip": "References that could not be matched to a source",
   "upload-pdf": "Import PDF",
+  "url": "URL",
+  "url-match": "URL Match",
+  "url-required": "URL is required",
   "usage": "Usage",
+  "using-archived-version": "Using archived version from",
   "valid": "Valid",
   "valid-description": "Valid",
-  "verification-details": "",
+  "verification-details": "Verification Details",
+  "verification-failed": "Verification failed",
+  "verification-in-progress": "Another verification is in progress",
+  "verification-successful": "Verification successful",
+  "verification-with-errors": "{verified}/{total} verified ({errors} errors)",
   "verified": "Verified",
   "verified-against": "Verified against",
   "verified-reference": "Reference could be successfully matched to a source",
   "verified-references-tooltip": "References that were successfully matched to a source",
-  "verifying-references-progress": "Verifying references ({current}/{total})",
-  "verifying-reference-current": "Verifying: {reference}",
-  "re-verifying-reference": "Re-verifying: {reference}",
-  "verification-in-progress": "Another verification is in progress",
-  "cancel-verification": "Cancel verification",
-  "restart-verification": "Restart verification",
   "verify": "Verify",
-  "verify-references": "Verify references",
-  "view-demo": "View a demonstration of how to use the extension",
-  "view-github": "View Project on GitHub",
-  "visit-website": "Visit Website",
+  "verify-against-website": "Verify against website",
+  "verify-reference-against-website-description": "Enter a website URL to verify this reference against the website content",
+  "verifying-reference-current": "Verifying: {reference}",
+  "verifying-references-progress": "Verifying references ({current}/{total})",
   "volume": "Volume",
   "volume-match": "Volume Match",
   "volume-prefix": "Volume Prefix",
   "website": "Website",
-  "publication-date": "Publication Date",
+  "website-metadata": "Website Metadata",
+  "website-url": "Website URL",
   "year": "Year",
   "year-match": "Year Match",
-  "year-suffix": "Year Suffix",
-  "verification-with-errors": "{verified}/{total} verified ({errors} errors)",
-  "all-references-verified": "All {total} references verified ✓",
-  "no-references-verified": "0/{total} references verified",
-  "partial-verification": "{verified}/{total} verified ({percentage}%)",
-  "retry-verification": "Retry Verification",
-  "references-count": "{count} references",
-  "no-data-available": "No data available"
+  "year-suffix": "Year Suffix"
 }
