refactor: update app title localization in JSON and Vue files

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -3,7 +3,6 @@
   "about-description": "Erfahre mehr über die Extension",
   "advisor": "Betreuer",
   "ai": "KI",
-  "app-title": "The Source Taster",
   "ai-description": "Aktiviere und konfiguriere KI-gestützte Funktionen",
   "ai-extraction": "KI-Extraktion",
   "ai-extraction-description": "Wenn diese Option aktiviert ist, wird Google Gemini verwendet, um DOIs aus der Eingabe zu extrahieren. Dadurch können DOIs oft genauer erkannt werden als mit der Standardmethode.",
@@ -21,6 +20,7 @@
   "api-key-invalid": "Ungültig",
   "api-key-texfield-message": "Geben Sie hier Ihren API-Schlüssel ein, um die KI-Extraktion zu verwenden. Falls Sie noch keinen API-Schlüssel haben, können Sie diesen",
   "api-key-valid": "Gültig",
+  "app-title": "The Source Taster",
   "appearance": "Aussehen",
   "appearance-description": "Passe das Erscheinungsbild der Extension an",
   "approximate-date": "Ungefähres Datum",
@@ -258,6 +258,7 @@
   "verify-reference-against-website-description": "Geben Sie eine Website-URL ein, um diese Referenz gegen den Website-Inhalt zu prüfen",
   "verifying-reference-current": "Überprüfe: {reference}",
   "verifying-references-progress": "Überprüfe Referenzen ({current}/{total})",
+  "visit-website": "Webseite besuchen",
   "volume": "Band",
   "volume-match": "Band-Übereinstimmung",
   "volume-prefix": "Band-Präfix",
