--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -3,7 +3,6 @@
   "about-description": "Learn more about the extension",
   "advisor": "Advisor",
   "ai": "AI",
-  "app-title": "The Source Taster",
   "ai-description": "Enable and configure AI-powered functionality",
   "ai-extraction": "AI Extraction",
   "ai-extraction-description": "When this option is enabled, Google Gemini is used to extract DOIs from the input. This often allows for more accurate DOI recognition compared to the standard method.",
@@ -21,6 +20,7 @@
   "api-key-invalid": "Invalid",
   "api-key-texfield-message": "Enter your API key here to use the AI extraction. If you don’t have an API key yet, you can",
   "api-key-valid": "Valid",
+  "app-title": "The Source Taster",
   "appearance": "Appearance",
   "appearance-description": "Adjust the appearance of the extension",
   "approximate-date": "Approximate Date",
@@ -258,6 +258,7 @@
   "verify-reference-against-website-description": "Enter a website URL to verify this reference against the website content",
   "verifying-reference-current": "Verifying: {reference}",
   "verifying-references-progress": "Verifying references ({current}/{total})",
+  "visit-website": "Visit website",
   "volume": "Volume",
   "volume-match": "Volume Match",
   "volume-prefix": "Volume Prefix",
