--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -252,6 +252,7 @@
   "verify-reference-against-website-description": "Geben Sie eine Website-URL ein, um diese Referenz gegen den Website-Inhalt zu prüfen",
   "verifying-reference-current": "Überprüfe: {reference}",
   "verifying-references-progress": "Überprüfe Referenzen ({current}/{total})",
+  "view-demo": "Demo ansehen",
   "visit-website": "Webseite besuchen",
   "volume": "Band",
   "volume-match": "Band-Übereinstimmung",
